--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -77,7 +77,7 @@ jobs:
         run: |
           cd $HOME
 
-           testflo testflo.tests -vs --show_skipped --durations=5 --durations-min=0 --deprecations_report dep.txt || RC=$?
+          testflo testflo.tests -vs --show_skipped --durations=5 --durations-min=0 --deprecations_report dep.txt || RC=$?
 
           if [[ $RC -ne 1 ]]; then
             echo "Expected some tests to fail."
@@ -105,12 +105,13 @@ jobs:
           fi
 
           grep "Deprecations Report" dep.txt
+          rm dep.txt
 
       - name: Run tests in serial
         run: |
           cd $HOME
 
-          testflo -n 1 testflo.tests || RC=$?
+          testflo testflo.tests -vs --show_skipped --durations=5 --durations-min=0 --deprecations_report dep.txt || RC=$?
 
           if [[ $RC -ne 1 ]]; then
             echo "Expected some tests to fail."
@@ -136,6 +137,9 @@ jobs:
             echo "Expected 11 tests to be skipped."
             exit 11
           fi
+
+          grep "Deprecations Report" dep.txt
+          rm dep.txt
 
       - name: Notify slack of failure
         uses: act10ns/slack@v2.0.0
