test release with test-pypi

--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -36,6 +36,8 @@ jobs:
 
       - name: Publish package distributions to PyPI (v1.12.4)
         uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc
+        with:
+          repository-url: https://test.pypi.org/legacy/
 
   test-pypi-release:
     name: Test PyPi Release
